# Stata-Executor-MCP

./: .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  PLAN.md  README.md  Requirements.md  main.py  perf.md  pyproject.toml
.github/workflows/: lint.yml
docs/: FIX.md
examples/: config.example.json
infra/: __init__.py  config.py  executable_resolver.py  models.py  stata_engine.py
scripts/: check.py
skills/stata-job-runner/: SKILL.md
skills/stata-job-runner/agents/: openai.yaml
skills/stata-job-runner/references/: contract.md  mcp-contract.md
skills/stata-job-runner/scripts/: run_stata_job.py
stata_executor/: __main__.py
stata_executor/adapters/: cli.py  mcp.py
stata_executor/config/: __init__.py
stata_executor/contract/: __init__.py
stata_executor/engine/: __init__.py  artifacts.py  doctor.py  executor.py  output_parser.py  preparation.py  process_runner.py
stata_executor/runtime/: __init__.py  executable_resolver.py
tests/: test_engine_modules.py  test_stata_executor.py  test_stata_job_runner.py
