[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "stata-executor"
version = "0.1.0"
description = "Stata execution MCP server."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.27.0",
]

[tool.hatch.build.targets.wheel]
packages = ["stata_executor"]
